--- a/backend/route-service/package.json
+++ b/backend/route-service/package.json
@@ -3,16 +3,15 @@
     "version": "1.0.0",
     "main": "src/app.js",
     "scripts": {
-      "start": "node src/app.js",
-      "dev": "nodemon src/app.js"
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "dotenv": "^16.3.1",
-      "axios": "^1.4.0"
+        "axios": "^1.8.4",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2"
     },
     "devDependencies": {
-      "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22"
     }
-  }
-  
+}
