--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -3,16 +3,16 @@
     "version": "1.0.0",
     "main": "src/app.js",
     "scripts": {
-      "start": "node src/app.js",
-      "dev": "nodemon src/app.js"
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "mongoose": "^7.2.0",
-      "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.2.0"
     },
     "devDependencies": {
-      "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22"
     }
-  }
-  
+}
