--- a/backend/frontend/supmap-frontend/package.json
+++ b/backend/frontend/supmap-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "supmap-frontend",
   "version": "0.1.0",
   "private": true,
+  "start": "react-scripts start",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -16,7 +17,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
