--- a/backend/gateway/.env
+++ b/backend/gateway/.env
@@ -5,3 +5,4 @@ ROUTE_SERVICE_URL=http://route-service:3003
 INCIDENT_SERVICE_URL=http://incident-service:3004
 ALERT_SERVICE_URL=http://alert-service:3005
 STATS_SERVICE_URL=http://stats-service:3006
+AI_SERVICE_URL=http://ai-service:3007
