--- a/backend/frontend/supmap-frontend/.env
+++ b/backend/frontend/supmap-frontend/.env
@@ -1,5 +1,5 @@
-REACT_APP_API_URL=https://localhost:3000/api
+REACT_APP_API_URL=http://localhost:3001
 PORT=4000
-HTTPS=true
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCEff9w4cC6x_qOfQE1Ut2ElQ_KbLS6bSc
 SSL_CRT_FILE=../../gateway/sslcert/cert.pem
 SSL_KEY_FILE=../../gateway/sslcert/key.pem
