--- a/backend/frontend/supmap-frontend/package.json
+++ b/backend/frontend/supmap-frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.507.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
@@ -20,6 +21,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
