--- a/mobile-client/trafineMobile/package.json
+++ b/mobile-client/trafineMobile/package.json
@@ -1,21 +1,61 @@
 {
-  "name": "trafineMobile",
-  "version": "0.0.1",
-  "private": true,
+  "name": "trafinemobile2",
+  "version": "1.0.0",
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "lint": "expo lint"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-    "react-native": "0.79.1",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.12",
+    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/native": "^7.1.7",
+    "@react-navigation/native-stack": "^7.3.11",
+    "axios": "^1.9.0",
+    "expo": "~53.0.5",
+    "expo-blur": "~14.1.4",
+    "expo-constants": "~17.1.5",
+    "expo-font": "~13.3.0",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.1.6",
+    "expo-linking": "~7.1.4",
+    "expo-location": "~18.1.4",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
+    "lottie-react-native": "7.2.2",
+    "polyline": "^0.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.17.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "~0.20.0",
+    "react-native-webview": "13.13.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@react-native-community/cli": "^18.0.0"
-  }
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.27.1",
+    "@types/react": "~19.0.10",
+    "eslint": "^9.26.0",
+    "eslint-config-expo": "~9.2.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-native": "^5.0.0",
+    "globals": "^16.1.0",
+    "typescript": "~5.8.3"
+  },
+  "private": true
 }
