--- a/backend/route-service/package.json
+++ b/backend/route-service/package.json
@@ -7,6 +7,7 @@
         "dev": "nodemon src/app.js"
     },
     "dependencies": {
+        "@mapbox/polyline": "^1.2.1",
         "axios": "^1.8.4",
         "dotenv": "^16.3.1",
         "express": "^4.18.2"
