--- a/mobile-client/trafineMobile/package.json
+++ b/mobile-client/trafineMobile/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/elements": "^2.3.8",
