--- a/backend/incident-service/package.json
+++ b/backend/incident-service/package.json
@@ -7,6 +7,7 @@
         "dev": "nodemon src/app.js"
     },
     "dependencies": {
+        "axios": "^1.9.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
