--- a/mobile-client/trafineMobile/package.json
+++ b/mobile-client/trafineMobile/package.json
@@ -47,7 +47,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "expo-notifications": "~0.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
