--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "ws": "^8.18.2"
   }
 }
